# libraries

./: .gitignore  CMakeLists.txt  libraries.sln
include/: mathematics.hpp  mathematics.inl
include/math/: color.hpp  color.inl  float2.hpp  float2.inl  float3.hpp  float3.inl  float4.hpp  float4.inl  int2.hpp  int2.inl  int3.hpp  int3.inl  mat3.hpp  mat3.inl  mat4.hpp  mat4.inl  math.hpp  math.inl  quaternion.hpp  quaternion.inl  types.hpp  uint2.hpp  uint2.inl  uint3.hpp  uint3.inl
include/math/types/: color.hpp  color.inl  float2.hpp  float2.inl  float3.hpp  float3.inl  float4.hpp  float4.inl  int2.hpp  int2.inl  int3.hpp  int3.inl  mat3.hpp  mat3.inl  mat4.hpp  mat4.inl  quaternion.hpp  quaternion.inl  uint2.hpp  uint2.inl  uint3.hpp  uint3.inl  vect.hpp
include/physics/: collision.hpp  referential2.hpp  referential3.hpp
include/physics/primitives2/: aabb2.hpp  circle.hpp  concavepolygon.hpp  convexpolygon.hpp  range2.hpp  rectangle.hpp
include/physics/primitives3/: aabb3.hpp  box.hpp  capsule.hpp  cylinder.hpp  plane.hpp  range3.hpp  segment.hpp  sphere.hpp
include/types/: color.hpp  color.inl  float2.hpp  float2.inl  float3.hpp  float3.inl  float4.hpp  float4.inl  mat3.hpp  mat3.inl  mat4.hpp  mat4.inl  quaternion.hpp  quaternion.inl  vect.hpp
include/utils/: memleaks.hpp  singleton.hpp  threadpool.hpp  utils.hpp
libraries/: libraries.vcxproj  libraries.vcxproj.filters
libraries/include/math/: math.hpp  math.inl  quaternion.hpp  (+1 more)
libraries/src/: main.cpp
src/: main.cpp
src/physics/: referential2.cpp
src/utils/: memleaks.cpp  threadpool.cpp
(+42 files in other folders)
